--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -32,20 +32,22 @@ jobs:
         uses: "google-github-actions/setup-gcloud@v0"
       - name: "gcloud CLI"
         run: "gcloud info"
+
       # https://github.com/google-github-actions/ssh-compute#inputs
-      - name: "SSH to GCP compute instances"
-        id: "compute-ssh"
-        uses: "google-github-actions/ssh-compute@v0"
-        with:
-          instance_name: "e2"
-          zone: "${{ secrets.COMPUTE_ZONE }}"
-          ssh_private_key: "${{ secrets.GCP_SSH_PRIVATE_KEY }}"
-          command: "echo Hello world"
-      - id: "test"
-        run: |-
-          echo '${{ steps.compute-ssh.outputs.stdout }}'
-          echo '${{ steps.compute-ssh.outputs.stderr }}'
+      #- name: "SSH to GCP compute instances"
+      #  id: "compute-ssh"
+      #  uses: "google-github-actions/ssh-compute@v0"
+      #  with:
+      #    instance_name: "e2"
+      #    zone: "${{ secrets.COMPUTE_ZONE }}"
+      #    ssh_private_key: "${{ secrets.GCP_SSH_PRIVATE_KEY }}"
+      #    command: "echo Hello world"
+      #- id: "test"
+      #  run: |-
+      #    echo '${{ steps.compute-ssh.outputs.stdout }}'
+      #    echo '${{ steps.compute-ssh.outputs.stderr }}'
       # https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
+      
       - name: "Upload to (GCS)"
         id: "upload-assets"
         uses: "google-github-actions/upload-cloud-storage@v0"
