--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -13,7 +13,7 @@ jobs:
     name: "🆙 GCP"
     runs-on: ubuntu-latest
     permissions:
-      contents: "read"
+      contents: "write"
       id-token: "write"
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -22,7 +22,7 @@ jobs:
       - uses: "actions/checkout@v3"
 
       # https://github.com/google-github-actions/auth#setting-up-workload-identity-federation
-      - name: "Workload Identity Federation"
+      - name: "🔒 Workload Identity Federation"
         id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
@@ -30,10 +30,10 @@ jobs:
           service_account: "${{ secrets.DIGITAL_CLOUDS_SERVICE }}"
 
       # https://github.com/google-github-actions/setup-gcloud#cloud-sdk-inputs
-      - name: "Google Cloud SDK"
+      - name: "⚙️ Google Cloud SDK"
         id: "setup-gcloud"
         uses: "google-github-actions/setup-gcloud@v0"
-      - name: "gcloud CLI"
+      - name: "Run gcloud CLI"
         run: "gcloud info"
 
       # https://github.com/google-github-actions/ssh-compute#inputs
@@ -47,11 +47,11 @@ jobs:
           command: "echo Hello world"
       - id: "test"
         run: |-
-          echo '${{ steps.compute-ssh.outputs.stdout }}'
-          echo '${{ steps.compute-ssh.outputs.stderr }}'
+         echo '${{ steps.compute-ssh.outputs.stdout }}'
+         echo '${{ steps.compute-ssh.outputs.stderr }}'
 
       # https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
-      - name: "Upload to (GCS)"
+      - name: "📤 Upload to (GCS)"
         id: "upload-assets"
         uses: "google-github-actions/upload-cloud-storage@v0"
         with:
