--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -13,7 +13,7 @@ jobs:
     name: "🆙 GCP"
     runs-on: ubuntu-latest
     permissions:
-      contents: "write"
+      contents: "read"
       id-token: "write"
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
 
-      # https://github.com/google-github-actions/auth#setting-up-workload-identity-federation
+      # ℹ️ https://github.com/google-github-actions/auth#setting-up-workload-identity-federation
       - name: "🔒 Workload Identity Federation"
         id: "auth"
         uses: "google-github-actions/auth@v0"
@@ -29,28 +29,28 @@ jobs:
           workload_identity_provider: "${{ secrets.DIGITAL_CLOUDS_PROVIDER }}"
           service_account: "${{ secrets.DIGITAL_CLOUDS_SERVICE }}"
 
-      # https://github.com/google-github-actions/setup-gcloud#cloud-sdk-inputs
+      # ℹ️ https://github.com/google-github-actions/setup-gcloud#cloud-sdk-inputs
       - name: "⚙️ Google Cloud SDK"
         id: "setup-gcloud"
         uses: "google-github-actions/setup-gcloud@v0"
       - name: "Run gcloud CLI"
         run: "gcloud info"
 
-      # https://github.com/google-github-actions/ssh-compute#inputs
-      - name: "SSH to GCP compute instances"
-        id: "compute-ssh"
-        uses: "google-github-actions/ssh-compute@v0"
-        with:
-          instance_name: "e2"
-          zone: "${{ secrets.COMPUTE_ZONE }}"
-          ssh_private_key: "${{ secrets.GCP_SSH_PRIVATE_KEY }}"
-          command: "echo Hello world"
-      - id: "test"
-        run: |-
-         echo '${{ steps.compute-ssh.outputs.stdout }}'
-         echo '${{ steps.compute-ssh.outputs.stderr }}'
+      # ℹ️ https://github.com/google-github-actions/ssh-compute#inputs
+      #- name: "SSH to GCP compute instances"
+      #  id: "compute-ssh"
+      #  uses: "google-github-actions/ssh-compute@v0"
+      #  with:
+      #    instance_name: "e2"
+      #    zone: "${{ secrets.COMPUTE_ZONE }}"
+      #    ssh_private_key: "${{ secrets.GCP_SSH_PRIVATE_KEY }}"
+      #    command: "echo Hello world"
+      #- id: "test"
+      #  run: |-
+      #    echo '${{ steps.compute-ssh.outputs.stdout }}'
+      #    echo '${{ steps.compute-ssh.outputs.stderr }}'
 
-      # https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
+      # ℹ️ https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
       - name: "📤 Upload to (GCS)"
         id: "upload-assets"
         uses: "google-github-actions/upload-cloud-storage@v0"
