--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -36,11 +36,11 @@ jobs:
           service_account: "${{ secrets.DIGITAL_CLOUDS_SERVICE }}"
 
       # ℹ️ https://github.com/google-github-actions/setup-gcloud#cloud-sdk-inputs
-      - name: "⚙️ Google Cloud SDK"
-        id: "setup-gcloud"
-        uses: "google-github-actions/setup-gcloud@v0"
-      - name: "Run gcloud CLI"
-        run: "gcloud info"
+      #- name: "⚙️ Google Cloud SDK"
+      #  id: "setup-gcloud"
+      #  uses: "google-github-actions/setup-gcloud@v0"
+      #- name: "Run gcloud CLI"
+      #  run: "gcloud info"
 
       # ℹ️ https://github.com/google-github-actions/ssh-compute#inputs
       #- name: "SSH to GCP compute instances"
@@ -58,12 +58,10 @@ jobs:
 
       # ℹ️ https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
       - name: "📤 Upload to (GCS)"
-        id: "upload-assets"
+        id: 'uploaded'
         uses: "google-github-actions/upload-cloud-storage@v0"
         with:
           path: "gcs/5f0326f2-f9c1-4d47-9772-af81d4a948de"
           destination: "digital-space"
-      - id: 'uploaded'
-        uses: 'ss-o/gcp/gcp-action@main'
-        env:
-          files: '${{ steps.upload-assets.outputs.uploaded }}'
+      - id: 'files-uploaded'
+        run: '${{ steps.upload-assets.outputs.uploaded }}'
