--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -58,7 +58,7 @@ jobs:
 
       # ℹ️ https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
       - name: "📤 Upload to (GCS)"
-      - id: 'upload-folder'
+        id: 'upload-folder'
         uses: "google-github-actions/upload-cloud-storage@v0"
         with:
           # ℹ️ Folder to upload
@@ -67,7 +67,7 @@ jobs:
           destination: "digital-space"
           # ℹ️ Will skip directory with .gcloudignore file.
           process_gcloudignore: true
-          
+
       - id: 'uploaded-files'
         uses: 'ss-o/gcp/gcp-action@main'
         env:
