--- a/.github/workflows/gcp-action.yml
+++ b/.github/workflows/gcp-action.yml
@@ -57,7 +57,7 @@ jobs:
       #    echo '${{ steps.compute-ssh.outputs.stderr }}'
 
       # ℹ️ https://github.com/google-github-actions/upload-cloud-storage#upload-cloud-storage
-      - name: "📤 Upload to (GCS)"
+      - name: "📤 Upload folder"
         id: 'upload-folder'
         uses: "google-github-actions/upload-cloud-storage@v0"
         with:
@@ -67,7 +67,10 @@ jobs:
           destination: "digital-space"
           # ℹ️ Will skip directory with .gcloudignore file.
           process_gcloudignore: true
+      #- id: 'uploaded-files'
+      #  uses: 'foo/bar@main'        
+      #  env:
+      #    files: '${{ steps.upload-folder.outputs.uploaded }}'
       - id: 'uploaded-files'
-        uses: ./
-        env:
-          files: '${{ steps.upload-folder.outputs.uploaded }}'
+      - name: '📥 Uploaded Files'
+        run: echo ${{ steps.upload-folder.outputs.uploaded }}
