--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -12,14 +12,14 @@ runtimes:
     - node@16.14.2
 lint:
   enabled:
-    - actionlint@1.6.20
+    - actionlint@1.6.22
     - git-diff-check
-    - gitleaks@8.13.0
-    - prettier@2.7.1
+    - gitleaks@8.15.2
+    - prettier@2.8.1
 cli:
-  version: 0.18.1-beta
+  version: 1.2.1
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.4
+      ref: v0.0.8
       uri: https://github.com/trunk-io/plugins
