--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -12,12 +12,13 @@ runtimes:
     - node@16.14.2
 lint:
   enabled:
+    - markdownlint@0.33.0
     - actionlint@1.6.22
     - git-diff-check
     - gitleaks@8.15.2
-    - prettier@2.8.1
+    - prettier@2.8.2
 cli:
-  version: 1.2.1
+  version: 1.3.1
 plugins:
   sources:
     - id: trunk
