--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -12,13 +12,15 @@ runtimes:
     - node@16.14.2
 lint:
   enabled:
+    - shfmt@3.5.0
+    - shellcheck@0.9.0
     - markdownlint@0.33.0
-    - actionlint@1.6.22
+    - actionlint@1.6.23
     - git-diff-check
-    - gitleaks@8.15.2
-    - prettier@2.8.2
+    - gitleaks@8.15.3
+    - prettier@2.8.3
 cli:
-  version: 1.3.1
+  version: 1.4.1
 plugins:
   sources:
     - id: trunk
